--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shu & Zhu's restik</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:wght@700&family=Source+Sans+3:wght@200&display=swap"
-      rel="stylesheet"
-    />
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="content"></div>
+    <div id="content">
+    </div>
+    <div class="page-content"></div>
   </body>
 </html>
